--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,14 +7,17 @@
   </head>
   <body>
    <h1>SCRIVICI LE TUE INFORMAZIONI</h1>
-   <p>per ottenere una password sicura</p>
+   <p>Per ottenere una password sicura</p>
    <!-- FORM -->
    <div class="form">
-     <input id="nome" type="text" placeholder="Scrivi il tuo nome">
-     <input id="cognome" type="text" placeholder="Scrivi il tuo cognome">
-     <input id="data" type="data" placeholder="Scrivi la tua data di nascita">
-     <input id="colore" type="text" placeholder="Scrivi il tuo colore preferito">
-     <button onclick="myFunction()" type="button" name="button">invia</button>
+     <div class="raccolta">
+       <input id="nome" type="text" placeholder="Scrivi il tuo nome">
+       <input id="cognome" type="text" placeholder="Scrivi il tuo cognome">
+       <input id="data" type="data" placeholder="Scrivi la tua data di nascita">
+       <input id="colore" type="text" placeholder="Scrivi il tuo colore preferito">
+       <button onclick="myFunction()" type="button" name="button">invia</button>
+     </div>
+
    </div>
     <p id="informazioni"></p>
   <script src="./assets/main.js" charset="utf-8"></script>
